Kubernetes-k3d/project/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-web-server
  name: go-web-server
spec:
  ports:
    - port: 9091
      protocol: TCP
      targetPort: 9091
  selector:
    app: go-web-server
  type: LoadBalancer
status:
  loadBalancer: {}
