Kubernetes-k3d/project/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-web-server
  name: go-web-server
spec:
  type: NodePort
  ports:
    - name: "go-web-server-service"
      port: 9091
      targetPort: 80
      nodePort: 30001
  selector:
    app: go-web-server
